--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "sideEffects": false,
   "scripts": {
     "build": "remix build",
-    "dev": "remix dev"
+    "dev": "remix dev",
+    "type-check": "tsc --pretty --noEmit",
+    "lint": "eslint --fix ./app"
   },
   "dependencies": {
     "@remix-run/node": "^1.3.4",
