--- a/package.json
+++ b/package.json
@@ -5,8 +5,13 @@
   "license": "MIT",
   "sideEffects": false,
   "scripts": {
-    "build": "remix build",
-    "dev": "remix dev",
+    "build": "run-s build:*",
+    "build:css": "npm run generate:css -- --minify",
+    "build:remix": "remix build",
+    "dev": "run-p dev:*",
+    "dev:css": "npm run generate:css -- --watch",
+    "dev:remix": "remix dev",
+    "generate:css": "npx tailwindcss -i ./app/styles/tailwind.css -o ./app/tailwind.css",
     "type-check": "tsc --pretty --noEmit",
     "lint": "eslint --fix ./app"
   },
@@ -23,6 +28,7 @@
     "@remix-run/serve": "^1.3.4",
     "@types/react": "^17.0.43",
     "@types/react-dom": "^17.0.14",
+    "autoprefixer": "^10.4.4",
     "eslint": "^8.12.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-airbnb-typescript": "^17.0.0",
@@ -32,7 +38,11 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-hooks": "^4.4.0",
+    "eslint-plugin-tailwindcss": "^3.5.0",
     "eslint-plugin-unused-imports": "^2.0.0",
+    "npm-run-all": "^4.1.5",
+    "postcss": "^8.4.12",
+    "tailwindcss": "^3.0.23",
     "typescript": "^4.6.3"
   },
   "engines": {
