--- a/package.json
+++ b/package.json
@@ -16,35 +16,36 @@
     "lint": "eslint --fix ./app"
   },
   "dependencies": {
-    "@remix-run/node": "^1.4.1",
-    "@remix-run/react": "^1.4.1",
-    "@remix-run/vercel": "^1.4.1",
+    "@remix-run/node": "^1.5.1",
+    "@remix-run/react": "^1.5.1",
+    "@remix-run/vercel": "^1.5.1",
     "clsx": "^1.1.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
+    "react-router": "^6.3.0"
   },
   "devDependencies": {
-    "@remix-run/dev": "^1.4.1",
-    "@remix-run/eslint-config": "^1.4.1",
-    "@remix-run/serve": "^1.4.1",
-    "@types/react": "^17.0.43",
-    "@types/react-dom": "^17.0.14",
-    "autoprefixer": "^10.4.4",
-    "eslint": "^8.13.0",
+    "@remix-run/dev": "^1.5.1",
+    "@remix-run/eslint-config": "^1.5.1",
+    "@remix-run/serve": "^1.5.1",
+    "@types/react": "^18.0.12",
+    "@types/react-dom": "^18.0.5",
+    "autoprefixer": "^10.4.7",
+    "eslint": "^8.17.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "^7.29.4",
-    "eslint-plugin-react-hooks": "^4.4.0",
-    "eslint-plugin-tailwindcss": "^3.5.0",
+    "eslint-plugin-react": "^7.30.0",
+    "eslint-plugin-react-hooks": "^4.5.0",
+    "eslint-plugin-tailwindcss": "^3.5.2",
     "eslint-plugin-unused-imports": "^2.0.0",
     "npm-run-all": "^4.1.5",
-    "postcss": "^8.4.12",
-    "tailwindcss": "^3.0.24",
-    "typescript": "^4.6.3"
+    "postcss": "^8.4.14",
+    "tailwindcss": "^3.1.2",
+    "typescript": "^4.7.3"
   },
   "engines": {
     "node": ">=14"
